--- a/src/components/AboutInfo.module.css
+++ b/src/components/AboutInfo.module.css
@@ -5,7 +5,7 @@
 }
 
 .aboutText {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: #9e1b32;
     font-size: 17px;
     font-weight: 700;
@@ -14,7 +14,7 @@
 }
 
 .descText {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: black;
     font-size: 11px;
     font-weight: 400;
