--- a/src/components/InfoTab.module.css
+++ b/src/components/InfoTab.module.css
@@ -10,7 +10,10 @@
     color: inherit;
 }
 
-a, a:hover, a:focus, a:active {
+a,
+a:hover,
+a:focus,
+a:active {
     color: inherit;
     text-decoration: none;
 }
@@ -32,7 +35,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .titleText {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: #9e1b32;
     font-size: 14px;
     font-weight: 700;
@@ -41,7 +44,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .subText {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     padding: 0%;
     margin: 0%;
     font-size: 12px;
